#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-43
2016-3/28 David Schneider
- update documentation
	
Tag: V00-02-42
2016-3/28 David Schneider
- deprecate fast_index option. Document new model with .smd (small data) files. 
  Introduce fast_index_force option if fast_index is still needed.
- add -q option to mpiexec commands in unit tests since we don't have openib installed
  on the interactive nodes where I frequently test. Consequently we won't test for the
  presence of openib on the build machines psdev etc.

Tag: V00-02-41
2016-2-5 David Schneider
- update to pdsdata 8.6.1 with Andor3d::FrameV1 (and ConfigV1) JIRA PSAS-214

Tag: V00-02-40
2015-12-10 David Schneider
- update to pdsdata 8.4.5 with modified Epix::Config100aV2, and Epix::ElementV3 JIRA PSAS-198

Tag: V00-02-39
2015-08-10 David Schneider
- change unitTests to use psanaTestLib function to get output directory with SIT_ARCH
	
Tag: V00-02-38
2015-08-10 David Schneider
- fix bug with trying to add blanks to ndarrays - (JIRA PSAS-172)
  add testing module TestPutNDArray
  add unit test for issue
  and test data to $SIT_ROOT/data_test/multifile - test_017_xppi0815

Tag: V00-02-37
2015-08-07 David Schneider
- run unit tests in subdirectory based on SIT_ARCH so that buildbot can run
  tests in parallel on different platforms.

Tag: V00-02-36
2015-07-28 David Schneider
- fix bug with in the Translation of vlen ndarrays (JIRA PSAS-170)
  reenable unit tests.

Tag: V00-02-35
2015-07-28 David Schneider
- temporarily disable unit tests for rhel7 (JIRA PSRT-63)

Tag: V00-02-34
2015-07-27 Igor Gaponenko
- fixed a bug in using the static_cast (JIRA PSRT-63)

Tag: V00-02-33