@@ -139,6 +139,7 @@ TimeTool = include             # Psana::TimeTool::ConfigV1, Psana::TimeTool::Con
 Timepix = include              # Psana::Timepix::ConfigV1, Psana::Timepix::ConfigV2, Psana::Timepix::ConfigV3, Psana::Timepix::DataV1, Psana::Timepix::DataV2
 TwoDGaussian = include         # Psana::Camera::TwoDGaussianV1
 UsdUsb = include               # Psana::UsdUsb::ConfigV1, Psana::UsdUsb::DataV1
+UsdUsbFex = include            # Psana::UsdUsb::FexConfigV1, Psana::UsdUsb::FexDataV1
 pnCCD = include                # Psana::PNCCD::ConfigV1, Psana::PNCCD::ConfigV2, Psana::PNCCD::FramesV1
 
 # user types to translate from the event store
