@@ -11,6 +11,12 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-44
+2016-4-4 David Schneider
+- update to pdsdata 8.6.7 but only support UsdUsb::Fex* at this time,
+  no support for Generic1D yet - JIRA PSAS-225
+- add unit test for UsdUsb::FexConfig name list of strings - multi test 20
+	
 Tag: V00-02-43
 2016-3/28 David Schneider
 - update documentation
